# VINS-Mobile

./: .gitignore  CMakeLists.txt  README.md
Android/VINSMobileAndroid/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
Android/VINSMobileAndroid/app/src/androidTest/java/me/li/ginger/vinsmobileandroid/: ExampleInstrumentedTest.java
Android/VINSMobileAndroid/app/src/main/: AndroidManifest.xml
Android/VINSMobileAndroid/app/src/main/cpp/: native-lib.cpp  vins_executor.cpp
Android/VINSMobileAndroid/app/src/main/cpp/include/: Boost  Ceres  Eigen  OpenCV  ThirdParty  VINS
Android/VINSMobileAndroid/app/src/main/java/me/li/ginger/vinsmobileandroid/: MainActivity.java
Android/VINSMobileAndroid/app/src/main/jniLibs/: Boost  Ceres  OpenCV  VINS
Android/VINSMobileAndroid/app/src/main/res/layout/: activity_main.xml
Android/VINSMobileAndroid/app/src/main/res/values/: strings.xml
Android/VINSMobileAndroid/app/src/test/java/me/li/ginger/vinsmobileandroid/: ExampleUnitTest.java
Android/VINSMobileAndroid/gradle/wrapper/: gradle-wrapper.properties
VINS_Lib/src/: VINS.cpp  VINS.hpp  draw_result.cpp  draw_result.hpp  feature_manager.cpp  feature_manager.hpp  feature_tracker.cpp  feature_tracker.hpp  global_param.cpp  global_param.hpp  imu_factor.h  imu_factor_pnp.h  inital_sfm.cpp  initial_aligment.cpp  initial_aligment.hpp  marginalization_factor.cpp  marginalization_factor.hpp  motion_estimator.cpp  utility.hpp  vins_pnp.cpp  vins_pnp.hpp  vins_system.cpp  vins_system.hpp
VINS_Lib/src/loop/: demoDetector.h  keyfame_database.h  keyframe.cpp  keyframe.h  keyframe_database.cpp  keyframe_database.h  loop_closure.cpp
VINS_ThirdPartyLib/ceres-solver/: CMakeLists.txt
VINS_ThirdPartyLib/ceres-solver/jni/: Application.mk
src/: test_vins_dataset.cpp
